--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "mongodb"
   ],
   "dependencies": {
-    "mongodb": "4.11.0"
+    "mongodb": "^4.17.2"
   },
   "standard": {
     "env": {
@@ -24,12 +24,12 @@
     }
   },
   "devDependencies": {
-    "eslint": "4.15.0",
-    "mocha": "5.0.0",
+    "eslint": "^10.0.0",
+    "mocha": "^11.3.0",
     "safe-buffer": "5.1.1",
     "should": "13.2.1",
-    "simple-odata-server": "1.0.0",
-    "standard": "10.0.3",
+    "simple-odata-server": "^1.2.2",
+    "standard": "^17.1.2",
     "supertest": "3.0.0"
   },
   "files": [
